mdix-go/internal/include/mdix_ffi.h

#ifndef MDIX_FFI_H
#define MDIX_FFI_H

#pragma once

/* Warning: this file is autogenerated by cbindgen. Do not edit manually. */

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

// How to combine two array-valued entries (GroupArray, or an array-valued
// SimpleProperty) that share a path across sources.
enum ArrayMergeStrategy {
    // The winning source's array entirely replaces the losing one's.
    ARRAY_MERGE_STRATEGY_REPLACE = 0,
    // Both arrays are concatenated, winner's items first.
    ARRAY_MERGE_STRATEGY_CONCAT = 1,
    // Concatenated (winner first), with exact-duplicate primitive values
    // removed. Complex values (objects, nested arrays) are never deduped.
    ARRAY_MERGE_STRATEGY_CONCAT_DEDUP = 2,
};
typedef int32_t ArrayMergeStrategy;

// Output format mode for mdix_to_mdix() and mdix_format_source().
enum MdixFormatMode {
    MDIX_FORMAT_MODE_DEFAULT = 0,
    MDIX_FORMAT_MODE_PRETTY = 1,
    MDIX_FORMAT_MODE_COMPACT = 2,
    MDIX_FORMAT_MODE_MINIFIED = 3,
};
typedef int32_t MdixFormatMode;

// How to resolve a key defined by more than one source in mdix_merge_sources()
// / mdix_merge_sources_weighted(). Mirrors dixscript::Runtime::MdixMergeStrategy
// — kept as a separate, explicitly #[repr(i32)] local type (same pattern as
// MdixType / MdixFormatMode above) since the core enum's repr is not
// FFI-guaranteed and lives in a different crate. See merge.rs's to_core().
enum MdixMergeStrategy {
    // Each source's weight decides the winner; equal weights fall back to
    // the lower-indexed (primary) source. This is what mdix_merge_sources()
    // (no explicit weights) effectively resolves to, since it auto-assigns
    // descending weights — source 0 gets 1.0, the last source gets ~0.0.
    MDIX_MERGE_STRATEGY_WEIGHTED_PRIORITY = 0,
    // The lower-indexed source always wins, regardless of weight.
    MDIX_MERGE_STRATEGY_PRIMARY_WINS = 1,
    // The higher-indexed source always wins, regardless of weight.
    MDIX_MERGE_STRATEGY_SECONDARY_WINS = 2,
    // Any key defined by more than one source is a hard error — the merge
    // fails and mdix_get_last_error() reports every conflicting path.
    MDIX_MERGE_STRATEGY_THROW_ON_CONFLICT = 3,
};
typedef int32_t MdixMergeStrategy;

// Type discriminants returned by mdix_get_type().
// Values are stable — the C# MdixValueType enum MUST match exactly.
// Numeric types are contiguous: Int=2, Long=3, Float=4, Double=5.
enum MdixType {
    MDIX_TYPE_UNKNOWN = -1,
    MDIX_TYPE_NULL = 0,
    MDIX_TYPE_BOOL = 1,
    MDIX_TYPE_INT = 2,
    MDIX_TYPE_LONG = 3,
    MDIX_TYPE_FLOAT = 4,
    MDIX_TYPE_DOUBLE = 5,
    MDIX_TYPE_STRING = 6,
    MDIX_TYPE_DATE = 7,
    MDIX_TYPE_TIMESTAMP = 8,
    MDIX_TYPE_HEX_COLOR = 9,
    MDIX_TYPE_BLOB = 10,
    MDIX_TYPE_REGEX = 11,
    MDIX_TYPE_ARRAY = 12,
    MDIX_TYPE_OBJECT = 13,
    MDIX_TYPE_TUPLE = 14,
    MDIX_TYPE_ENUM = 15,
};
typedef int32_t MdixType;

// Returns a static pointer to the DixScript FFI version string.
// Do NOT pass this pointer to mdix_free_string() — it is a static allocation.
 const char *mdix_version(void) ;

// Load and compile a .mdix source file from disk.
// Returns an opaque handle on success, null on failure (check mdix_get_last_error).
// Caller must free with mdix_free when done.
 void *mdix_load(const char *path) ;

// Compile and load .mdix source from an in-memory string.
// Useful for Unity TextAssets and embedded configs.
// Returns an opaque handle on success, null on failure.
// Caller must free with mdix_free when done.
 void *mdix_load_str(const char *source) ;

// Free a handle created by any mdix_load* function.
// Passing null is safe. Do not call twice on the same pointer.
 void mdix_free(void *handle) ;

// Load an encrypted .mdix.enc file using a .mdix.key file for key resolution.
// Pass null for key_path to auto-detect the key file next to the enc file.
 void *mdix_load_encrypted(const char *enc_path, const char *key_path) ;

// Load an encrypted .mdix.enc file using a password for key derivation.
 void *mdix_load_encrypted_password(const char *enc_path, const char *password) ;

// Load encrypted data from raw bytes with key file content provided as a string.
// Intended for platforms without filesystem access (asset bundles, network delivery).
// Pass null for password if the key file does not use password mode.

void *mdix_load_encrypted_bytes(const uint8_t *encrypted_bytes,
                                int32_t byte_count,
                                const char *key_file_content,
                                const char *password)
;

// Returns true if the handle is non-null (i.e. load succeeded).
 bool mdix_is_valid(const void *handle) ;

// Returns the number of entries in the flat data map, or -1 if handle is null.
 int32_t mdix_entry_count(const void *handle) ;

// Returns true if the source file was encrypted.
 bool mdix_is_encrypted(const void *handle) ;

// Returns true if the source file was compressed.
 bool mdix_is_compressed(const void *handle) ;

// Returns the runtime version string from the loaded DixData.
// Caller must free the returned string with mdix_free_string().
 char *mdix_get_loaded_version(const void *handle) ;

// Returns all keys in the flat data map as a null-terminated C string array.
// Writes the count to out_count. Caller must free with mdix_free_string_array.
// Includes synthetic indexed keys (tags[0], server.host, etc.).
 char **mdix_get_all_keys(const void *handle, int32_t *out_count) ;

// Read a value from the @CONFIG section by key (e.g. "version", "author").
// Returns null if the section is absent or the key does not exist.
// Caller must free the returned string with mdix_free_string().
 char *mdix_get_config_value(const void *handle, const char *key) ;

// Validate .mdix source text without loading the result.
//
// Runs the full compilation pipeline (tokenize → parse → semantic analysis →
// AST enhance → value resolve). Returns true on success; on failure, the
// error detail is available via mdix_get_last_error().
//
// Useful for Unity editor tooling — validate before shipping.
 bool mdix_validate(const char *source) ;

// Returns the MdixType discriminant for the value at path, or MdixType::Unknown
// if the path does not exist or the handle is null.
 MdixType mdix_get_type(const void *handle, const char *path) ;

// Returns the element count of an Array or Tuple at path, or -1 if the path
// does not exist, is not a collection, or the handle is null.
 int32_t mdix_get_array_length(const void *handle, const char *path) ;

// Get a string value at path.
// Also returns Date, Timestamp, HexColor, Blob, and Regex values as strings.
// Caller must free the returned string with mdix_free_string().
 char *mdix_get_string(const void *handle, const char *path) ;

// Get a 32-bit integer at path. Also works on Enum paths (returns the integer value).
// Returns 0 on failure; check mdix_get_last_error() to distinguish from a real 0.
 int32_t mdix_get_int(const void *handle, const char *path) ;

// Get a 64-bit integer at path. Also accepts Int values (widened without loss).
// Returns 0 on failure.
 int64_t mdix_get_long(const void *handle, const char *path) ;

// Get a 32-bit float at path. Returns 0.0 on failure.
 float mdix_get_float(const void *handle, const char *path) ;

// Get a 64-bit double at path. Returns 0.0 on failure.
 double mdix_get_double(const void *handle, const char *path) ;

// Get a boolean at path. Returns false on failure.
 bool mdix_get_bool(const void *handle, const char *path) ;

// Returns the enum type name at path (e.g. "WeaponClass").
// Returns null if the path does not exist or is not an enum.
// Caller must free with mdix_free_string().
 char *mdix_get_enum_name(const void *handle, const char *path) ;

// Returns the enum field name at path (e.g. "ASSAULT_RIFLE").
// Returns null if the path does not exist or is not an enum.
// Caller must free with mdix_free_string().
 char *mdix_get_enum_field(const void *handle, const char *path) ;

// Serialize the raw DixValue at path to a JSON string.
//
// Useful for reading Object or Array values wholesale into C# for further
// processing. Note: DixValue::Enum serializes as {"enum_name":...,"value":N}
// via serde — use mdix_get_int on enum paths to get just the integer.
// Caller must free with mdix_free_string().
 char *mdix_get_json(const void *handle, const char *path) ;

// Select all values matching a dotted path pattern and return them as a JSON array.
//
// Use `*` as a wildcard for a single path segment:
//   "server.*"   → all direct children of the server table property
//   "weapons.*"  → all direct children of the weapons object
//
// LIMITATION: bracket-indexed paths (enemies[0].name) do not match dot
// wildcards. Use mdix_get_array_length + mdix_get_* with explicit indexed
// paths for array item access from the C# side.
//
// Caller must free the returned string with mdix_free_string().
 char *mdix_select_many_as_json(const void *handle, const char *pattern) ;

// Returns true if a value exists at path.
 bool mdix_exists(const void *handle, const char *path) ;

// Returns the direct child key names under prefix as a C string array.
// Pass an empty string for top-level keys.
// Writes the count to out_count. Caller must free with mdix_free_string_array().
 char **mdix_get_keys(const void *handle, const char *prefix, int32_t *out_count) ;

// Free a C string returned by any mdix getter function.
// Do NOT call on the static pointer from mdix_version(). Passing null is safe.
 void mdix_free_string(char *s) ;

// Free a string array returned by mdix_get_keys() or mdix_get_all_keys().
// count must match the value written to out_count by the original call.
 void mdix_free_string_array(char **arr, int32_t count) ;

// Returns a pointer to the last error string set on this thread, or null if
// no error is pending. Valid only until the next mdix_* call on this thread.
// Do NOT free this pointer.
 const char *mdix_get_last_error(void) ;

// Clear the pending error on this thread.
 void mdix_clear_error(void) ;

// Export the loaded data as a JSON string.
// Enum values are emitted as plain integers (not as JSON objects).
// Pass indented=true for pretty-printed output.
// Caller must free with mdix_free_string().
 char *mdix_to_json(const void *handle, bool indented) ;

// Export the loaded data as .mdix source text.
// Caller must free with mdix_free_string().
//
// FIX: previously returned *mut c_void — corrected to *mut c_char.
 char *mdix_to_mdix(const void *handle, MdixFormatMode mode) ;

// Export the loaded data as TOML.
// Caller must free with mdix_free_string().
 char *mdix_to_toml(const void *handle) ;

// Format .mdix source text according to the given mode.
// Minified mode removes all unnecessary whitespace.
// Compact mode collapses blank lines and strips trailing whitespace.
// Caller must free with mdix_free_string().
 char *mdix_format_source(const char *source, MdixFormatMode mode) ;

// Minify .mdix source — remove all unnecessary whitespace using the tokenizer.
// Caller must free with mdix_free_string().
 char *mdix_minify_source(const char *source) ;

// Compact .mdix source — strip trailing whitespace and collapse blank lines.
// Preserves indentation and code structure. Lighter than minify.
// Caller must free with mdix_free_string().
 char *mdix_compact_source(const char *source) ;

// Strip all comments from .mdix source. Content inside string literals is preserved.
// Caller must free with mdix_free_string().
 char *mdix_strip_comments(const char *source) ;

// Create an empty builder for constructing new save data.
// Caller must free with mdix_builder_free when done.
 void *mdix_builder_new(void) ;

// Create a builder pre-populated from an existing loaded handle.
//
// Copies all root-level structural values from the handle into the builder.
// Synthetic indexed children (tags[0], server.host, etc.) are stripped so
// only values that map to valid .mdix identifiers remain editable.
//
// Typical use: load a save file → fork into builder → change a few fields
// → mdix_builder_save back to disk. The original handle remains valid.
//
// Caller must free the returned builder with mdix_builder_free when done.
 void *mdix_builder_from_handle(const void *handle) ;

// Free a builder created by mdix_builder_new or mdix_builder_from_handle.
// Passing null is safe. Do not call twice on the same pointer.
 void mdix_builder_free(void *builder) ;

// Returns the number of entries currently in the builder, or -1 if null.
 int32_t mdix_builder_entry_count(const void *builder) ;

// Clear all entries from the builder. Returns true on success.
 bool mdix_builder_clear(void *builder) ;

 bool mdix_builder_set_string(void *builder, const char *path, const char *value) ;

 bool mdix_builder_set_int(void *builder, const char *path, int32_t value) ;

 bool mdix_builder_set_long(void *builder, const char *path, int64_t value) ;

 bool mdix_builder_set_float(void *builder, const char *path, float value) ;

 bool mdix_builder_set_double(void *builder, const char *path, double value) ;

 bool mdix_builder_set_bool(void *builder, const char *path, bool value) ;

// Remove the entry at path from the builder. Returns true if it existed.
 bool mdix_builder_remove(void *builder, const char *path) ;

// Returns true if the builder contains an entry at path.
 bool mdix_builder_has_key(const void *builder, const char *path) ;

 char *mdix_builder_get_string(const void *builder, const char *path) ;

 int32_t mdix_builder_get_int(const void *builder, const char *path) ;

 int64_t mdix_builder_get_long(const void *builder, const char *path) ;

 float mdix_builder_get_float(const void *builder, const char *path) ;

 double mdix_builder_get_double(const void *builder, const char *path) ;

 bool mdix_builder_get_bool(const void *builder, const char *path) ;

// Serialize the builder's entries and write them to a .mdix file at path.
// Parent directories are created if they do not exist.
// Returns true on success.
 bool mdix_builder_save(const void *builder, const char *path) ;

// Serialize the builder's entries to a pretty-printed .mdix string.
// Caller must free with mdix_free_string().
 char *mdix_builder_to_string(const void *builder) ;

// Parse a JSON string and load it as a DixData handle.
// Caller must free with mdix_free when done.
 void *mdix_from_json(const char *source) ;

// Parse a TOML string and load it as a DixData handle.
// Caller must free with mdix_free when done.
 void *mdix_from_toml(const char *source) ;

// Merge two or more .mdix source strings into a new handle using the real
// AST-level DixScript merger (dixscript::Runtime::MdixMerger) — full type
// fidelity (Long / Float / Double / HexColor / Blob / Regex / Date /
// Timestamp / Enum all survive exactly, unlike a JSON round-trip), a real
// per-key conflict report, and configurable array merge behavior. See
// merge.rs's module doc for why this takes source strings rather than
// existing handles or file paths.
//
// Sources are weighted in descending order: sources[0] gets weight 1.0,
// sources[count-1] gets the lowest weight (only matters under
// MdixMergeStrategy::WeightedPriority). Use mdix_merge_sources_weighted for
// explicit per-source weights.
//
// `out_conflicts_json`, if non-null, receives a heap string describing
// every conflict that was resolved:
// `[{"path":"...","winningSource":0,"winningLabel":"..."}, ...]`
// (`"[]"` when there were none). Caller must free it with mdix_free_string()
// — independently of whether the merge itself succeeded, except that on
// failure it is left null instead (matching every other out-param in this
// crate: check the pointer, don't assume it was written).
//
// Returns a new opaque handle on success (caller must free with mdix_free),
// null on failure — check mdix_get_last_error().

void *mdix_merge_sources(const char *const *sources,
                         int32_t count,
                         MdixMergeStrategy strategy,
                         ArrayMergeStrategy array_strategy,
                         char **out_conflicts_json)
;

// Merge .mdix source strings with explicit per-source weights (`weights`
// must be the same length as `sources`). Higher weight wins under
// MdixMergeStrategy::WeightedPriority. See mdix_merge_sources for the
// shared semantics (fidelity, conflict report, error handling).

void *mdix_merge_sources_weighted(const char *const *sources,
                                  const double *weights,
                                  int32_t count,
                                  MdixMergeStrategy strategy,
                                  ArrayMergeStrategy array_strategy,
                                  char **out_conflicts_json)
;

#endif /* MDIX_FFI_H */